cleaned plugin code